# talent-plan

courses/rust/building-blocks/bb-2/bb-2_part1/src/: main.rs
courses/rust/building-blocks/bb-2/bb-2_part2/src/: main.rs
courses/rust/building-blocks/bb-2/bb-2_part2_json/: Cargo.toml
courses/rust/building-blocks/bb-2/bb-2_part2_json/src/: main.rs
courses/rust/building-blocks/bb-2/bb-2_part3/: Cargo.toml
courses/rust/building-blocks/bb-2_part1/: Cargo.toml
courses/rust/building-blocks/bb-2_part2/: Cargo.toml
courses/rust/building-blocks/bb-2_part3/src/: main.rs
courses/rust/building-blocks/bb-3/exercise_1/: Cargo.toml
courses/rust/building-blocks/bb-3/exercise_1/src/: client.rs  server.rs
courses/rust/building-blocks/bb-3/exercise_2/: Cargo.toml  readme
courses/rust/building-blocks/bb-3/exercise_2/src/: client.rs  protocol.rs  server.rs
courses/rust/projects/project-1/my-implem/: Cargo.toml
courses/rust/projects/project-1/my-implem/src/: lib.rs
courses/rust/projects/project-2/my-implem/: Cargo.toml  dump.rdb
courses/rust/projects/project-2/my-implem/src/: error.rs  kv.rs  lib.rs
courses/rust/projects/project-2/my-implem/tests/: tests.rs
