[package]
name = "bb-2"
version = "0.1.0"
edition = "2021"
description = "Serialize and deserialize a data structure with serde (JSON)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde" = { version = "1.0.159", features = ["derive"] }
ron = "0.8.0"
"tempfile" = "3.5.0"
"anyhow" = "1.0.70"